[package]
name = "rpi-gpio"
description = "Library and CLI application to inspect RPi GPIO"
version = "0.1.1"
authors = [
	"Fusion Engineering <oss@fusion.engineering>",
	"Maarten de Vries <maarten@de-vri.es>",
]
edition = "2018"
license = "BSD-2-Clause"
readme  = "README.md"

[dependencies]
nix = "0.13"
structopt = "0.2"
yansi = "0.5"
